--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -41,16 +41,17 @@
 
 .listaArticulos{
     width: 100%;
+    margin-top: 5%;
+    margin-bottom: 10%;
     @include grid-categoria(repeat(4,1fr), none, none, 1.875rem);
-    margin-top: 3%;
-    padding-bottom: 10%;
     text-align: center;
     div{
         li{
             list-style: none;
+            height: auto;
             img{
                 width: 100%;
-                height: 21.875rem;
+                height: auto;
                 object-fit: contain;
                 &:hover{
                     transform: scale(1.03)
