--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -2,13 +2,15 @@
     width: 100%;
     height: auto;
     text-align: center;
-    padding-top: 2%;
+    margin-top: 3%;
+    margin-bottom: 3%;
     @include grid-categoria(repeat(10, 1fr), start, start, .625rem);
     li{
         list-style: none;
         gap: 5px;
         width: 100%;
         height: 100%;
+        padding-top: 3%;
         img{
             width: 100%;
             height: 80%;
