--- a/scss/layout/_main-consultas.scss
+++ b/scss/layout/_main-consultas.scss
@@ -145,7 +145,7 @@
 }
 .datosContacto{
     position:absolute;
-    bottom:60px;right:55px;
+    bottom:7%;right:18%;
     background:#50505a;
     color:#fff;width:320px;
     padding:16px 4px 16px 0;
