--- a/scss/layout/_main-consultas.scss
+++ b/scss/layout/_main-consultas.scss
@@ -2,26 +2,22 @@
 .consultas{
     font-family: sans-serif;
     position:relative;
-    .responsive-container-block {
-        min-height: 100px;
-        height: 700px;
+    height: 1050px;
+    .container-block {
+        height: 680px;
         width: 100%;
         padding: 10px;
         display: flex;
-        flex-wrap: wrap;
-        margin-top: 0px;
-        margin-right: auto;
-        margin-bottom: 0px;
-        margin-left: auto;
-        justify-content: flex-start;
+        flex-direction: row;
         align-content: center;
         justify-content: center;
     }
-    .responsive-container-block.bigContainer {
-        padding: 20px;
+    .container-block.bigContainer {
+        margin-top: 5%;
+        margin-bottom: 5%;
         height: 100%;
     }
-    .responsive-container-block.Container {
+    .container-block.Container {
         max-width: 1320px;
         margin-top: 50px;
         margin-right: auto;
@@ -29,15 +25,15 @@
         margin-left: auto;
     }
 }
-.responsive-cell-block.S{
+.cell-block.S{
     width: 50%;
+    img{
+        width: 100%;
+        object-fit: cover;
+        height: 100%;
+    }
 }
-.mainImg {
-    width: 100%;
-    object-fit: cover;
-    height: 100%;
-}
-.responsive-cell-block.M {
+.cell-block.M {
     width: 50%;
     height: 100%;
     background-color: #333333;
@@ -46,15 +42,7 @@
     padding-bottom: 10px;
     padding-left: 50px;
     p{
-        margin-top: 0px;
-        margin-right: 0px;
-        margin-bottom: 0px;
-        margin-left: 0px;
         line-height: 25px;
-        padding-top: 0px;
-        padding-right: 0px;
-        padding-bottom: 0px;
-        padding-left: 0px;
     }
     .titulo-caja.descripcion{
             color: white;
@@ -72,7 +60,6 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    height: 100%;
     a{
         color: white;
         padding-top: 20px;
@@ -94,18 +81,12 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
-    margin-top: 0px;
-    margin-right: 0px;
     margin-bottom: 30px;
-    margin-left: 0px;
     width: 100%;
     div {
         width: 49%;
         p{
-            margin-top: 0px;
-            margin-right: 0px;
             margin-bottom: 10px;
-            margin-left: 0px;
             color: white;
         }
     }
@@ -119,16 +100,9 @@
 }
 .messageArea {
     width: 100%;
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 50px;
-    margin-left: 0px;
+    margin-bottom: 10%;
     textarea{
         width: 100%;
-        margin-top: 0px;
-        margin-right: 0px;
-        margin-bottom: 0px;
-        margin-left: 0px;
         padding-top: 10px;
         padding-right: 10px;
         padding-bottom: 10px;
@@ -136,16 +110,12 @@
         height: 100%;
     }
     p{
-        margin-top: 0px;
-        margin-right: 0px;
-        margin-bottom: 10px;
-        margin-left: 0px;
         color: white;
     }
 }
 .datosContacto{
     position:absolute;
-    bottom:7%;right:18%;
+    bottom:28%;right:20%;
     background:#50505a;
     color:#fff;width:320px;
     padding:16px 4px 16px 0;
