--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -7,6 +7,9 @@
         img{
             height: 900px;
         }
+        h1{
+            font-size: map-get($font-size,xl);
+        }
     }
     .categoria1{
         height: 450px;
@@ -51,10 +54,6 @@
         grid-template-rows: repeat(10,45px);
         button{
             font-size: map-get($font-size,xs);
-            grid-column-start: 3;
-            grid-column-end: 4;
-            grid-row-start: 8;
-            grid-row-end: 10;
         }
     }
     .categoria3a{
@@ -141,6 +140,8 @@
     }
     .listaArticulos{
         grid-template-columns: repeat(3,1fr);
+        padding-top: 30px;
+        padding-bottom: 50px;
         gap: 10px;
         font-size: map-get($font-size, xxs);
         div{
@@ -184,32 +185,43 @@
         }
     }
     .consultas{
-        height: 1500px;
+        height: 1600px;
         padding-bottom: 5%;
+        padding-top: 0px;
     }
-    .responsive-cell-block.M {
+    .container-block.bigContainer {
+        margin-top: 0%;
+        margin-bottom: 5%;
+    }
+    .container-block.Container {
+        display: flex;
+        flex-direction: column;
+        height: 1400px;
+        width: 100%;
+        align-items: center;
+        justify-content: start;
+        margin-top: 0%;
+    }
+    .cell-block.M {
         width: 80%;
-        height: 100%;
+        height: 80%;
     }
     .firstRow {
         flex-direction: column;
         div{
             input{
                 width: 203%;
-                margin-top: 0px;
-                margin-right: 0px;
                 margin-bottom: 10px;
-                margin-left: 0px;
                 }
         }
     }
-    .responsive-cell-block.S {
+    .cell-block.S {
         width: 80%;
-        height: 100%;
+        height: 80%;
     }
     .datosContacto{
         position:absolute;
-        bottom:60px;right:70px;
+        bottom:7%;right:7%;
     }
     .messageArea{
         margin-bottom: 10px;
@@ -218,4 +230,16 @@
             height: 85%
         }
     }
+    .error404{
+            div{
+            img{
+                margin-left: 23%;
+            }
+        }
+        ul{
+            div{
+                margin-left: 36%;
+                }
+            }
+        }
 }
