--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -9,7 +9,7 @@
         a{
             color: aliceblue;
             text-decoration: none;
-            font-size: map-get($font-size, sm);
+            font-size: map-get($font-size, md);
             font-family: $font-texto;
             &:hover{
                 text-shadow: 0px 0px .625rem aliceblue;
