--- a/scss/layout/_error404.scss
+++ b/scss/layout/_error404.scss
@@ -28,6 +28,7 @@
             li{
                 font-size: 25px;
                 text-align: center;
+                list-style: none;
             }
         }
     }
