--- a/scss/layout/media/_media426.scss
+++ b/scss/layout/media/_media426.scss
@@ -244,28 +244,6 @@
             }
         }
     }
-
-    .sucursales{
-        padding: 30px;
-        justify-content: space-between;
-        padding-left: 1.25rem;
-        iframe{
-            width: 100%;
-            height: 18.75rem;
-            padding: 5%;
-        }
-        h2{
-            font-size: map-get($font-size, md);
-        }
-        h3{
-            padding-left: 0;
-            font-size: map-get($font-size, sm);
-        }
-        li{
-            font-size: map-get($font-size, xxs);
-            padding-top: 5px;
-        }
-    }
     .nosotros{
         h1{
             font-size: map-get($font-size, md);
@@ -336,6 +314,38 @@
                     font-size: 12px;
                 }
             }
+        }
+    }
+    .sucursales{
+        padding-top: 30px;
+        justify-content: space-between;
+        padding-left: 1.25rem;
+        iframe{
+            width: 100%;
+        }
+        h2{
+            font-size: map-get($font-size, md);
+        }
+        h3{
+            padding-left: 0;
+            font-size: map-get($font-size, sm);
+        }
+        li{
+            font-size: map-get($font-size, xxs);
+            padding-top: 5px;
+        }
+    }
+    .maparanguren{
+        img{
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+    }
+    .mapcampana{
+        img{
+            width: 100%;
+            height: 200px;
         }
     }
 }
